--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ env_logger = "0.10"
 indicatif = "0.17"
 url = "=2.5.4"
 intervals = "2.1.0"
+rust_wfa = "1.0.0"
 
 [dev-dependencies]
 criterion = "0.5"
