--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -3,3 +3,6 @@ workflows:
 - name: Haplograph_eval_annotation
   subclass: wdl
   primaryDescriptorPath: /wdl/haplograph_eval_annotation.wdl
+- name: FufiHLA_eval_annotation
+  subclass: wdl
+  primaryDescriptorPath: /wdl/FufiHLA_evaluation_all.wdl
